hphp/hack/test/typecheck/higher_kinded_types/substitution_bad2.php.rust_elab.exp
File "substitution_bad2.php", line 4, characters 15-15:
Please make your type parameter start with the letter `T` (capital) (Naming[2042])
File "substitution_bad2.php", line 7, characters 10-11:
Invalid return type (Typing[4110])
  File "substitution_bad2.php", line 6, characters 36-51:
  Expected `string`
  File "substitution_bad2.php", line 6, characters 16-28:
  But got `int`
File "substitution_bad2.php", line 11, characters 10-11:
Invalid return type (Typing[4110])
  File "substitution_bad2.php", line 10, characters 30-39:
  Expected `string`
  File "substitution_bad2.php", line 10, characters 16-22:
  But got `int`
